# cello

./: CMakeLists.txt
src/: CMakeLists.txt  glfw_w.cpp  glfw_w.hpp  grid.cpp  grid.hpp  main.c  main.cpp
src/app/: CMakeLists.txt  main.c
src/grid/: CMakeLists.txt  grid.c
src/grid/include/: grid.h
